Parametros con servlet

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /ServletsHW/build/
 /CrecionServlet/nbproject/private/
 /CrecionServlet/build/
+/ManejoParametros/nbproject/private/
+/ManejoParametros/build/
