--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /CrecionServlet/build/
 /ManejoParametros/nbproject/private/
 /ManejoParametros/build/
+/Formularios/nbproject/private/
+/Formularios/build/
