--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Cabeceros/build/
 /TipoNavegador/nbproject/private/
 /TipoNavegador/build/
+/Redireccionamiento/nbproject/private/
+/Redireccionamiento/build/
