--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /TipoNavegador/build/
 /Redireccionamiento/nbproject/private/
 /Redireccionamiento/build/
+/HMJSP/nbproject/private/
+/HMJSP/build/
