--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /ElementosJSP/nbproject/private/
 /ElementosJSP/build/
 /ScripletsJSP/nbproject/private/
+/DeclaracionJSP/nbproject/private/
+/DeclaracionJSP/build/
