--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /ScripletsJSP/nbproject/private/
 /DeclaracionJSP/nbproject/private/
 /DeclaracionJSP/build/
+/DocumentosJSP/nbproject/private/
+/DocumentosJSP/build/
