manejo excepcion JSP

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /DeclaracionJSP/build/
 /DocumentosJSP/nbproject/private/
 /DocumentosJSP/build/
+/excelJSP/nbproject/private/
+/excelJSP/build/
+/excelJSP_2/nbproject/private/
+/excelJSP_2/build/
