inclusion estatica/dinamica

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /excelJSP/build/
 /excelJSP_2/nbproject/private/
 /excelJSP_2/build/
+/EnclusionEstatica/nbproject/private/
+/EnclusionEstatica/build/
+/InclusionDinamica/nbproject/private/
+/InclusionDinamica/build/
