--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /EnclusionEstatica/build/
 /InclusionDinamica/nbproject/private/
 /InclusionDinamica/build/
+/JavaBeans/nbproject/private/
+/JavaBean/nbproject/private/
+/JavaBean/build/
